understood java a little better, deep & shallow copy of ArrayList